--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -44,12 +44,13 @@
     </div>
 
     <div *ngIf="!requestList">
-        <div class="row cust-grid">
-            <div class="col-12 text-center">
-                <h1>No Requests !!</h1>
-            </div>
-        </div>
-    </div>
+      <div class="row cust-grid">
+          <div class="col-12 text-center">
+              <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/fogg-87.png">
+              <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Requests !!</h1>
+          </div>
+      </div>
+  </div>
 
 
     <div class="d-block d-md-none mt-4">
