--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -266,7 +266,7 @@
         <div class="row cust-grid">
             <div class="col-12 text-center">
                 <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/fogg-87.png">
-                <h1 style="font-family: 'Dancing Script', cursive;">No Requests !!</h1>
+                <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Requests !!</h1>
             </div>
         </div>
     </div>
