--- a/src/app/modules/guide/components/activities/activities.component.html
+++ b/src/app/modules/guide/components/activities/activities.component.html
@@ -44,11 +44,12 @@
     </div>
 
     <div *ngIf="!previousBookingsList">
-        <div class="row cust-grid">
-            <div class="col-12 text-center">
-                <h1>No Recent activities !!</h1>
-            </div>
+      <div class="row cust-grid">
+        <div class="col-12 text-center">
+            <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/flamenco-list-is-empty-1.png">
+            <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">No Recent activity !!</h1>
         </div>
+    </div>
     </div>
 
     <div class="d-block d-md-none mt-4">
