--- a/src/app/modules/guide/components/create-deal/create-deal.component.scss
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.scss
@@ -5,7 +5,8 @@
   box-shadow: 0px 0px 24px 5px rgba(255, 255, 255, 0.497);
 
 }
-body{
+.bg{
+  height:100vh;
   background-image: url(../../../../../assets/images/sylwia-bartyzel-D2K1UZr4vxk-unsplash.jpg);
   background-size: cover;
   background-position: center;
