--- a/src/app/modules/tourists/components/favourites/favourites.component.html
+++ b/src/app/modules/tourists/components/favourites/favourites.component.html
@@ -2,14 +2,15 @@
     <div class="row">
         <div class="col-12">
             <h1 class="headup">Your Favourites</h1>
-           <app-deals-cards [dealsList]="favouritesList" [isFav]="'true'"></app-deals-cards> 
+           <app-deals-cards [dealsList]="favouritesList" [isFav]="'true'"></app-deals-cards>
         </div>
     </div>
 </div>
 <div *ngIf="!favouritesList"  class="container-fluid">
     <div class="row vertical-center" style="min-height: 85vh;">
-        <div class="col-12 text-center ">
-            <h1>No Favourites Yet</h1>
-        </div>
+      <div class="col-12 text-center">
+        <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/bermuda-166.png">
+        <h1 style="font-family: 'Dancing Script', cursive; font-size: 4vh;">Nothing here !!</h1>
+    </div>
     </div>
 </div>
