--- a/src/app/shared/components/chat-room/chat-room.component.html
+++ b/src/app/shared/components/chat-room/chat-room.component.html
@@ -54,7 +54,7 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </div>
                     <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn mx-0 my-0 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                        <button type="submit" class="form-control btn mx-0 my-0 px-1 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                     </div>
                 </div>
             </form>
@@ -111,7 +111,7 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </div>
                     <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn mx-0 my-0 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                        <button type="submit" class="form-control btn px-1 mx-0 my-0 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                     </div>
                 </div>
             </form>
