clean up the code of tourist module

--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -94,26 +94,26 @@
     </div>
 </div>
 
-<div class="my-5 text-center bgclass white-text getStartedBlock" >
+<div class="my-5 text-center bgclass white-text getStartedBlock p-5" >
     <h1 class="py-4"><b>Let's get started!</b></h1>
     <div class="row pb-3">
         <div class=" col-12 col-md-4 px-3">
-            <div class="text-center" style=" position:relative; font-size:65px; font-weight: 800;">1 <br>
-                <strong style="font-size:30px; font-weight: 200;">Create your Voila account</strong>
+            <div class="text-center" style="font-size:65px; font-weight: 800;">1<br>
+                <p style="font-size:30px">Create your Voila account</p>
             </div>
             <div style="font-size:18px;">
                 Sign up and set up your profile. Already have an account? Then, let’s get started with your host application.
             </div>
         </div>
         <div class="col-12 col-md-4 px-3">
-            <div class="text-center" style=" position:relative; font-size:65px; font-weight: 800;">2 <br>
-                <strong style=" font-size:30px; font-weight: 200;">Questionnaire</strong>
+            <div class="text-center" style="font-size:65px; font-weight: 800;">2 <br>
+                <p style=" font-size:30px">Questionnaire</p>
             </div>
             <div style="font-size:18px;">We want to know more from you. It will help us get an idea of what you are really passionate about.</div>
         </div>
         <div class="col-12 col-md-4 px-3">
-            <div class="text-center" style=" position:relative; font-size:65px; font-weight: 800;">3 <br>
-                <strong style="font-size:30px; font-weight: 200;">We’ll be in touch</strong>
+            <div class="text-center" style="font-size:65px; font-weight: 800;">3 <br>
+                <p style="font-size:30px;">We’ll be in touch</p>
             </div>
             <div style="font-size:18px;">Submit your questionnaire and that’s it! Once we review your application, our team will reach out to you.</div>
         </div>
