--- a/src/app/modules/guide/pages/show-register/show-register.component.scss
+++ b/src/app/modules/guide/pages/show-register/show-register.component.scss
@@ -40,12 +40,12 @@
     }
 }
 
-.getStartedBlock {
-    padding: 0 30px 45px 30px;
-}
+// .getStartedBlock {
+//     padding: 0 30px 45px 30px;
+// }
 
-@media(min-width: 767px) {
-    .getStartedBlock {
-        padding: 0 100px 45px 100px;
-    } 
-}
+// @media(min-width: 767px) {
+//     .getStartedBlock {
+//         padding: 0 100px 45px 100px;
+//     } 
+// }
