--- a/src/app/modules/guide/components/create-deal/create-deal.component.html
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.html
@@ -11,21 +11,15 @@
             <div class="form-group">
               <label for="form6">State</label>
               <input type="text" id="form6" disabled formControlName="state" class="form-control">
-              <!-- <select class="form-control" id="form58" formControlName="state" class="browser-default custom-select" #state
-                  (change)="getAllCity(state.value)">
-                  <option value="" disabled>Select State</option>
-                  <option *ngFor="let item of stateList" disabled [value]="item.name"> {{ item?.name }}</option>
-              </select> -->
             </div>
           </div>
           <div class="col-6">
             <div class="form-group">
               <label for="form7">City</label>
-              <!-- <input type="text" id="form7" formControlName="city" class="form-control"> -->
               <select formControlName="city" class="form-control" class="browser-default custom-select" id="form58">
                 <option value="" disabled>Select City</option>
                 <option *ngFor="let item of cityList" [value]="item.name"> {{ item?.name }}</option>
-                <small class="text-mute">May be your starting point</small>
+                <small class="text-muted">May be your starting point</small>
               </select>
             </div>
           </div>
@@ -56,7 +50,6 @@
           <div class="col-6">
             <div class="form-group">
               <label for="form9">Group Type</label>
-              <!-- <input type="text" id="form1" formControlName="interest" class="form-control"> -->
               <select formControlName="groupType" class="form-control" class="browser-default custom-select" id="form9">
                   <option value="" disabled>Select Group type</option>
                   <option *ngFor="let item of groupType" [value]="item"> {{ item }}</option>
@@ -67,7 +60,7 @@
             <div class="form-group">
               <label for="form11">Group name</label>
               <input type="text" id="form11" formControlName="groupName" placeholder="enter group name" class="form-control">
- <small class="text-mute">This will bw your chat group name</small>
+              <small class="text-muted">This will bw your chat group name</small>
             </div>
           </div>
         </div>
