small bugs resolved

--- a/src/app/shared/components/chat-room/chat-room.component.html
+++ b/src/app/shared/components/chat-room/chat-room.component.html
@@ -8,7 +8,7 @@
                 <div class="col-sm-12 ">
                     <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-12">
-                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{roomName | titlecase}} (Group)</b></span>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                 <div class="col-sm-12 ">
                     <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-12">
-                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{roomName | titlecase}} (Group)</b></span>
                         </div>
                     </div>
