--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -4,20 +4,20 @@
         <div class="container-fluid px-1 px-md-5">
             <div class="card" style="background: linear-gradient(180deg, rgba(255,255,255,0.9671218829328606) 25%, rgba(221,213,226,1) 75%, rgba(202,194,207,1) 99%);">
                 <div class="row  check pb-0 card-body">
-                    <div class="row col-12 col-lg-9 px-0">
-                        <div class="col-4 booking px-0">
+                    <div class="row col-12 col-lg-9 pr-0">
+                        <div class="col-4 col-lg-3 booking text-center">
                             <a [routerLink]="['now']" routerLinkActive="active">
                                 <h5>
                                     <mdb-icon far icon="calendar-alt"></mdb-icon> &nbsp; Bookings</h5>
                             </a>
                         </div>
-                        <div class="col-4 request">
+                        <div class="col-4 col-lg-3 request text-center">
                             <a [routerLink]="['requests']" routerLinkActive="active">
                                 <h5>
                                     <mdb-icon far icon="address-card"></mdb-icon> &nbsp; Requested</h5>
                             </a>
                         </div>
-                        <div class="col-4 history">
+                        <div class="col-4 col-lg-3 history text-center">
                             <a [routerLink]="['histories']" routerLinkActive="active">
                                 <h5>
                                     <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
