--- a/src/app/shared/components/chats/chats.component.html
+++ b/src/app/shared/components/chats/chats.component.html
@@ -9,7 +9,7 @@
                     <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                    
                         <div class="col-12">
-                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{name | titlecase}} (Personal)</b></span>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                     <div class="row py-3 mx-0" style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%);">
                         
                         <div class="col-12">
-                            <span style="font-size: 30px;"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{name | titlecase}} (Personal)</b></span>
                         </div>
                     </div>
