--- a/src/app/modules/home/top-deals/top-deals.component.scss
+++ b/src/app/modules/home/top-deals/top-deals.component.scss
@@ -1,53 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
-
 @media(max-width: 992px) {
-  .dealImg {
-    height: 250px;
-    width: 100%;
-  }
+    .dealImg {
+        height: 250px;
+        width: 100%;
+    }
 }
 
-// @media (min-width: 768px) {
-//     mdb-card {
-//         height: 210px;
-//     }
-// }
-// .all{
-//   background-color: rgb(56,50,48) !important;
-// }
-// // .large-screen{
-// //   height: 390px !important;
-// // }
-// .deal-card {
-//     width: 460px;
-//     height: 200px;
-// }
-// .deal-card a{
-//  margin-top: -34px;
-// }
-// .deal-img {
-//     width: 150px;
-//     height: 180px;
-//     border-radius: 10px;
-//     margin: 10px 0 0 10px;
-// }
-.deal-text h1{
-  font-family: 'Amatic SC', cursive ;
-  color:white;
-  margin-left: auto;
-  margin: 25px;
-  font-size: 40px;
+.parallax {
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    background-image: url(https://images.unsplash.com/photo-1576948676159-ad6604dc1fd0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80);
+    min-height: 140px;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media (min-width: 480px) {
+    .small-card {
+        display: none;
+    }
+}
+
+@media (max-width: 479px) {
+    .large-card {
+        display: none;
+    }
+}
+
+.deal-text h1 {
+    // font-family: 'Amatic SC', cursive
+    font-size: 40px;
 }
 
 // .carousel-indicators {
 //   display: none;
 // }
-
 // .carousel .carousel-indicators {
 //     cursor: default;
 //     pointer-events: none;
 //   }
-
 // mdb-carosel ol .carousel-indicators {
 //   position: relative;
 //   right: 0;
@@ -64,7 +64,6 @@
 // .col-8 .card-body{
 //   color: black;
 // }
-
 // /* control image height */
 // .card-img-top-250 {
 //   max-height: 250px;
