--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,85 +1,84 @@
 <footer class="page-footer font-small" style="background: #553d67;">
-  <div style="background-color: #01c271;">
-    <div class="container">
-      <div class="row py-4 d-flex align-items-center">
-        <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
-          <h6 class="mb-0">Get connected with us on social networks!</h6>
+    <div style="background-color: #22c1c3">
+        <div class="container">
+            <div class="row py-4 d-flex align-items-center">
+                <div class="col-md-6 col-lg-5 text-center text-md-left mb-4 mb-md-0">
+                    <h6 class="mb-0">Get connected with us on social networks!</h6>
+                </div>
+                <div class="col-md-6 col-lg-7 text-center text-md-right">
+                    <a class="fb-ic">
+                        <i class="fab fa-facebook-f white-text mr-4"> </i>
+                    </a>
+                    <a class="tw-ic">
+                        <i class="fab fa-twitter white-text mr-4"> </i>
+                    </a>
+                    <a class="gplus-ic">
+                        <i class="fab fa-google-plus-g white-text mr-4"> </i>
+                    </a>
+                    <a class="li-ic">
+                        <i class="fab fa-linkedin-in white-text mr-4"> </i>
+                    </a>
+                    <a class="ins-ic">
+                        <i class="fab fa-instagram white-text"> </i>
+                    </a>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 col-lg-7 text-center text-md-right">
-          <a class="fb-ic">
-            <i class="fab fa-facebook-f white-text mr-4"> </i>
-          </a>
-          <a class="tw-ic">
-            <i class="fab fa-twitter white-text mr-4"> </i>
-          </a>
-          <a class="gplus-ic">
-            <i class="fab fa-google-plus-g white-text mr-4"> </i>
-          </a>
-          <a class="li-ic">
-            <i class="fab fa-linkedin-in white-text mr-4"> </i>
-          </a>
-          <a class="ins-ic">
-            <i class="fab fa-instagram white-text"> </i>
-          </a>
+    </div>
+    <div class="container text-center text-md-left mt-5">
+        <div class="row mt-3">
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                <h6 class="text-uppercase font-weight-bold">Voila</h6>
+                <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #22c1c3;">
+                <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                <h6 class="text-uppercase font-weight-bold">Usage</h6>
+                <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #22c1c3;">
+                <p>
+                    Full time Guide
+                </p>
+                <p>
+                    Personalized Trips
+                </p>
+                <p>
+                    Preplaned Deals
+                </p>
+                <p>
+                    No middle man
+                </p>
+            </div>
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 ahover">
+                <h6 class="text-uppercase font-weight-bold">About Voila</h6>
+                <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #22c1c3;">
+                <p>
+                    <a [routerLink]="['/aboutUs']">Vision</a>
+                </p>
+                <p>
+                    <a [routerLink]="['/guide/show-register']">Become an Guide</a>
+                </p>
+                <p>
+                    <a [routerLink]="['/aboutUs']">The Decoits 3.0</a>
+                </p>
+                <p>
+                    <a [routerLink]="['/help']">Help</a>
+                </p>
+            </div>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                <h6 class="text-uppercase font-weight-bold">Contact</h6>
+                <hr class="mb-4 mt-0 d-inline-block mx-auto" style="width: 60px; background-color: #22c1c3;">
+                <p>
+                    <i class="fas fa-home mr-3"></i>JMIT, Radaur, Haryana</p>
+                <p>
+                    <i class="fas fa-envelope mr-3"></i> voila@gmail.com</p>
+                <p>
+                    <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+                <p>
+                    <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <div class="container text-center text-md-left mt-5">
-    <div class="row mt-3">
-      <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-        <h6 class="text-uppercase font-weight-bold">Voila</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet,
-          consectetur
-          adipisicing elit.</p>
-      </div>
-      <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-        <h6 class="text-uppercase font-weight-bold">Usage</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          Full time Guide
-        </p>
-        <p>
-         Personalized Trips
-        </p>
-        <p>
-        Preplaned Deals
-        </p>
-        <p>
-          No middle man
-        </p>
-      </div>
-      <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4 ahover">
-        <h6 class="text-uppercase font-weight-bold">About Voila</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <a [routerLink]="['/aboutUs']">Vision</a>
-        </p>
-        <p>
-          <a [routerLink]="['/guide/show-register']" >Become an Guide</a>
-        </p>
-        <p>
-          <a [routerLink]="['/aboutUs']">The Decoits 3.0</a>
-        </p>
-        <p>
-          <a [routerLink]="['/help']">Help</a>
-        </p>
-      </div>
-      <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-        <h6 class="text-uppercase font-weight-bold">Contact</h6>
-        <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-        <p>
-          <i class="fas fa-home mr-3"></i>JMIT, Radaur, Haryana</p>
-        <p>
-          <i class="fas fa-envelope mr-3"></i> voila@gmail.com</p>
-        <p>
-          <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-        <p>
-          <i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
-      </div>
+    <div class="footer-copyright text-center py-3">
+        <h3>Find a Travel <del> Guide </del> Partner</h3>
     </div>
-  </div>
-  <div class="footer-copyright text-center py-3"><h3>Find a Travel <del> Guide </del> Partner</h3>
-  </div>
 </footer>
