--- a/src/app/modules/home/top-deals/top-deals.component.html
+++ b/src/app/modules/home/top-deals/top-deals.component.html
@@ -14,7 +14,7 @@
                     </div>
                     <div class="col-0 col-sm-12 col-md-12 col-lg-7 col-xl-7">
                         <!-- <h1>Select from our hot deals</h1> -->
-                        <h4 class="white-text mx-3" style="font-family: 'Neuton', serif;">
+                        <h4 class="white-text m-3" style="font-family: 'Neuton', serif;">
                             Select from wide range of hand picked deals by our experts and explore the world with us through our selected hot deals
 
                         </h4>
