--- a/src/app/modules/tourists/pages/register/register.component.html
+++ b/src/app/modules/tourists/pages/register/register.component.html
@@ -17,7 +17,7 @@
                                 <div class="form-group">
                                     <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                                     <label for="form5">Email</label>
-                                    <input type="text" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
+                                    <input type="email" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
                                     <small class="text-muted">Your Email should not be already Register</small>
                                 </div>
                             </div>
