--- a/src/app/modules/home/top-cities/top-cities.component.html
+++ b/src/app/modules/home/top-cities/top-cities.component.html
@@ -12,7 +12,8 @@
     <div class=" col-12 col-sm-12 col-md-12 col-lg-8 col-xl-9 my-3">
         <div class="row">
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3" *ngFor="let place of topCitiesList | slice:0:3">
-                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                <mdb-card [ngStyle]="{'background-image':'url(' + place.imgUrl + ')'}"
+                style="background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
                             <mdb-card-title>
@@ -34,7 +35,8 @@
 
 
             <div class="col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-3 d-block d-md-none d-xl-block" *ngFor="let place of topCitiesList | slice:3:4">
-                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
+                <mdb-card [ngStyle]="{'background-image':'url(' + place.imgUrl + ')'}"
+                style="background-size:cover;">
                     <mdb-card-body class="waves-effect waves-light">
                         <div class="white-text">
                             <mdb-card-title>
@@ -58,27 +60,3 @@
 
 </div>
 
-<!-- <div class="md-layout">
-    <mbsc-form-group>
-        <mbsc-form-group-title>Fixed width</mbsc-form-group-title>
-        <mbsc-scrollview [options]="fixedSettings" class="md-fixed" *ngFor="let place of topCitiesList | slice:0:3">
-            <mbsc-scrollview-item>
-                <mdb-card style="background-image: url(https://media-cdn.tripadvisor.com/media/photo-s/0a/c4/72/f6/jal-mahal-jaipur-tour.jpg); background-size:cover;">
-                    <mdb-card-body class="waves-effect waves-light">
-                        <div class="white-text">
-                            <mdb-card-title>
-                                <h4>{{place.place}}</h4>
-                            </mdb-card-title>
-                            <mdb-card-text>
-                                <b>{{place.city}}, {{place.state}}</b>
-                             
-                            </mdb-card-text>
-                        </div>
-
-                    </mdb-card-body>
-                </mdb-card>
-            </mbsc-scrollview-item>
-          
-        </mbsc-scrollview>
-    </mbsc-form-group>
-</div> -->
