--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -118,7 +118,7 @@
                     </div>
                     <div class="tab-pane fade" id="deal" role="tabpanel" aria-labelledby="deal-tab">
                         <h3 class="text-black">Recommended deals</h3>
-                        <div class="row p-2 text-center" *ngIf="getDealsList(guide).length > 0">
+                        <div class="row p-2 text-center" *ngIf="getDealsList(guide)">
                             <div class="col-lg-3 col-md-4" *ngFor="let deal of getDealsList(guide) | slice:0:3">
                                 <div class="view deal-card guide-card">
                                     <img src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" width="100%" alt="">
@@ -139,7 +139,7 @@
                                  size="sm" color="primary" mdbWavesEffect>More Deals</button>
                             </div>
                         </div>
-                        <div *ngIf="getDealsList(guide).length <= 0" class="row p-2 text-center">
+                        <div *ngIf="!getDealsList(guide)" class="row p-2 text-center">
                             <h2>No Deals Avialable</h2>
                         </div>
                     </div>
