--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -93,7 +93,7 @@
                             <div class="group1 form-group mb-5">
                                 <label for="form2" class="label">Password</label>
                                 <input mdbInput [type]="touristShow ? 'text' : 'password'" formControlName="password" id="form2" class="input">
-                                <div class="text-white"><input (change)="showTouirstPwd($event)" type="checkbox">&nbsp;Show Password</div>
+                                <div class="text-white"><input (change)="showTouristPwd($event)" type="checkbox">&nbsp;Show Password</div>
 
 
                                 <a class="mt-2 text-info float-right">Forgot Password?</a>
