--- a/src/app/shared/components/personal-modal/personal-modal.component.html
+++ b/src/app/shared/components/personal-modal/personal-modal.component.html
@@ -36,7 +36,7 @@
                   <div class="col">
                       <div class="form-group">
                         <p>People</p>
-                          <input type="number" (change)="calculatePrice($event)" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                          <input type="number" (keyup)="calculatePrice($event)" formControlName="noOfPeople" class="form-control" placeholder="no of people">
                       </div>
                   </div>
               </div>
