--- a/src/app/shared/components/chat-room/chat-room.component.html
+++ b/src/app/shared/components/chat-room/chat-room.component.html
@@ -6,56 +6,7 @@
         <div *ngIf="userService.getRole() === 'tourist'" class="col-12 col-lg-9">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
-                        <div class="col-12">
-                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
-                                {{roomName | titlecase}} (Group)</b></span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-12 rowDiv" ngx-auto-scroll lock-y-offset="10" observe-attributes>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="message-wrapper" *ngFor="let msg of messageList">
-                                <div class="left" *ngIf="msg.senderId !== user._id">
-                                    <div class="chat-bubble left slide-left">
-                                        <div class="small-f" style="color:#553d67">{{msg.senderName  | titlecase}}</div>
-                                        <div class="message">{{msg.body}}</div>
-                                        <div class="small-f float-right">{{msg.created | date: 'dd-MM-yyyy'}}</div>
-                                    </div>
-                                </div>
-
-                                <div class="right" *ngIf="msg.senderId === user._id">
-                                    <div class="chat-bubble right slide-right">
-                                        <div class="message">{{msg.body}}</div>
-                                        <div class="small-f float-right">{{msg.created | date: 'dd-MM-yyyy'}}</div>
-                                    </div>
-                                </div>
-
-                                <div class="cf"></div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <form autocomplete="off">
-                <div class="row bottomFix" style="z-index:1000">
-                    <div class="col-9 col-md-10 col-lg-7 px-0">
-                        <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
-                    </div>
-                    <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn mx-0 my-0 px-1 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <div *ngIf="userService.getRole() === 'guide'" class="col">
-            <div class="row">
-                <div class="col-sm-12 ">
-                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
+                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #7bd3c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-12">
                             <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{roomName | titlecase}} (Group)</b></span>
@@ -95,7 +46,56 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </div>
                     <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn px-1 mx-0 my-0 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                        <button type="submit" class="form-control btn mx-0 my-0 px-1 font-size" style="background:#7bd3c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+        <div *ngIf="userService.getRole() === 'guide'" class="col">
+            <div class="row">
+                <div class="col-sm-12 ">
+                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #7bd3c3 0%,rgb(252, 255, 114) 100%); ">
+                        <div class="col-12">
+                            <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
+                                {{roomName | titlecase}} (Group)</b></span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-12 rowDiv" ngx-auto-scroll lock-y-offset="10" observe-attributes>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="message-wrapper" *ngFor="let msg of messageList">
+                                <div class="left" *ngIf="msg.senderId !== user._id">
+                                    <div class="chat-bubble left slide-left">
+                                        <div class="small-f" style="color:#553d67">{{msg.senderName | titlecase}}</div>
+                                        <div class="message">{{msg.body}}</div>
+                                        <div class="small-f float-right">{{msg.created | date: 'dd-MM-yyyy'}}</div>
+                                    </div>
+                                </div>
+
+                                <div class="right" *ngIf="msg.senderId === user._id">
+                                    <div class="chat-bubble right slide-right">
+                                        <div class="message">{{msg.body}}</div>
+                                        <div class="small-f float-right">{{msg.created | date: 'dd-MM-yyyy'}}</div>
+                                    </div>
+                                </div>
+
+                                <div class="cf"></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <form autocomplete="off">
+                <div class="row bottomFix" style="z-index:1000">
+                    <div class="col-9 col-md-10 col-lg-7 px-0">
+                        <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
+                    </div>
+                    <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
+                        <button type="submit" class="form-control btn px-1 mx-0 my-0 font-size" style="background:#7bd3c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                     </div>
                 </div>
             </form>
