--- a/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
+++ b/src/app/modules/admin/pages/guide-profile/guide-profile.component.html
@@ -1,49 +1,51 @@
-<div class="pro-bg p-3">
-    <div class="white-text">
-     <h1 class="text-center mb-5" style="font-size: 5vh;">Pertional Info.</h1>
-
-        <div class="row">
-            <div class="col-12 col-md-3 mb-3">
-                <img class=" h-75 w-75" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class="mx-auto img-fluid rounded-circle">
+<!-- <div class="pro-bg p-3">
+    <div>
+      <div class="row">
+     <h1 class="col-8 head text-center my-5" style="font-size: 4vh;">Pertional Info.</h1>
+ <div class=" col-4 ppp mb-3">
+                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class=" h-75 w-75 float-right mx-auto img-fluid">
             </div>
-            <div class="row col-12 col-md-9">
+          </div>
+        <div class="row">
+
+            <div class="row col-12">
             <div class="det col-6">
-              <div class="mb-4"><strong>Name</strong>
+              <div class="mb-4"><strong style="color : #00746e;">Name</strong>
                 <div class="float-right">   {{userData?.name}}
                 </div>
             </div>
-              <div class="mb-4"><strong>Address</strong>
+              <div class="mb-4"><strong style="color : #00746e;">Address</strong>
                   <div class="float-right"> {{userData.address | titlecase}}
                   </div>
               </div>
-              <div class="mb-4"><strong>City</strong>
+              <div class="mb-4"><strong style="color : #00746e;">City</strong>
                   <div class="float-right">{{userData.city | titlecase}}</div>
               </div>
-              <div class="mb-4"><strong>State</strong>
+              <div class="mb-4"><strong style="color : #00746e;">State</strong>
                   <div class="float-right">{{userData.state | titlecase}}</div>
               </div>
-              <div class="mb-4"><strong>Speaks</strong>
+              <div class="mb-4"><strong style="color : #00746e;">Speaks</strong>
                   <div class="float-right" *ngFor="let item of userData.languages">{{item | titlecase}}&nbsp;,&nbsp;</div>
               </div>
-              <div class="mb-4"><strong>Loves</strong>
+              <div class="mb-4"><strong style="color : #00746e;">Loves</strong>
                   <div class="float-right" *ngFor="let item of userData.interests">{{item | titlecase}}&nbsp;,&nbsp;</div>
               </div>
 
           </div>
           <div class="det col-6">
-            <div class="mb-4"><strong>Phone</strong>
+            <div class="mb-4"><strong style="color : #00746e;">Phone</strong>
               <div class="float-right"> {{userData.phoneNumber}}</div>
           </div>
-            <div class="mb-4"><strong>Aadhar Number</strong>
+            <div class="mb-4"><strong style="color : #00746e;">Aadhar Number</strong>
                 <div class="float-right">{{userData.aadhaarNumber}}</div>
             </div>
-            <div class="mb-4"><strong>Nationality</strong>
+            <div class="mb-4"><strong style="color : #00746e;">Nationality</strong>
                 <div class="float-right">India</div>
             </div>
-            <div class="mb-4"><strong>Date of Birth</strong>
+            <div class="mb-4"><strong style="color : #00746e;">Date of Birth</strong>
                 <div class="float-right">{{userData.dob | date: 'dd-MM-yyyy'}}</div>
             </div>
-            <div class="mb-4"><strong>Email ID</strong>
+            <div class="mb-4"><strong style="color : #00746e;">Email ID</strong>
                 <div class="float-right">{{userData.email}}</div>
             </div>
         </div>
@@ -52,7 +54,6 @@
         </div>
 
     </div>
-</div>
 <div class="row">
   <div class="col-6">
     <div class="my-3 mx-3">
@@ -60,14 +61,14 @@
         <div class="container mt-3">
             <div class="row">
                 <div class="det col-12">
-                    <div><strong>People Limit</strong>
+                    <div><strong style="color : #00746e;">People Limit</strong>
                         <div class="float-right">{{userData.peopleLimit}}
                         </div>
                     </div>
-                    <div><strong>Charges Per Head</strong>
+                    <div><strong style="color : #00746e;">Charges Per Head</strong>
                         <div class="float-right">Rs. {{userData.perHeadCharge}}</div>
                     </div>
-                    <div><strong>Charges Per Day </strong>
+                    <div><strong style="color : #00746e;">Charges Per Day </strong>
                         <div class="float-right">Rs. {{userData.perDayCharge}}</div>
                     </div>
 
@@ -83,18 +84,18 @@
         <div class="container mt-3">
             <div class="row" *ngFor="let item of userData.experience">
                 <div class="det col-12">
-                    <div><strong>Work Place</strong>
+                    <div><strong style="color : #00746e;">Work Place</strong>
                         <div class="float-right">{{item.work | titlecase}}
                         </div>
                     </div>
-                    <div><strong>Work Profile</strong>
+                    <div><strong style="color : #00746e;">Work Profile</strong>
                         <div class="float-right"> {{item.profile | titlecase}}</div>
                     </div>
-                    <div><strong>Starting Year</strong>
+                    <div><strong style="color : #00746e;">Starting Year</strong>
                         <div class="float-right"> {{item.startYear}}</div>
                     </div>
 
-                    <div><strong>Duration</strong>
+                    <div><strong style="color : #00746e;">Duration</strong>
                         <div class="float-right">{{item.duration}} months</div>
                     </div>
 
@@ -111,6 +112,7 @@
 
     <button type="button" mdbBtn color="success" (click)="acceptRejectGuide('APPROVED')" mdbWavesEffect>Accept</button>
 </div>
+</div> -->
 
 <!-- <div class="my-5 mx-3">
     <h1 class="mb-4">Bookings</h1>
@@ -144,3 +146,59 @@
         </mdb-card-body>
     </mdb-card>
 </div> -->
+<!-- real kaam to ye hai -->
+<div class=" bg ml-0 pl-0 row mt-5 m-3">
+    <div class="col-12 m-3 px-5 px-3 mainh text-center">
+    <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" class=" h-75 w-75 pl-5 mx-auto img-fluid">
+    <h1 style="color: #553d67;">  {{userData?.name}} </h1>
+    <h4>{{userData.email}}</h4>
+  </div>
+    <!-- rigt -->
+    <div class="row col-12 col-md-6">
+
+
+<div class="col-12 heading my-4">
+    <h3 class="text-center">Address</h3>
+    <h6> {{userData.address | titlecase}}</h6>
+    <h6>City: {{userData.city | titlecase}}</h6>
+    <h6>state: {{userData.state | titlecase}}</h6>
+</div>
+<div class="col-12 heading my-4">
+    <h3 class="text-center">More Info</h3>
+    <h6> Phone:{{userData.phoneNumber}}</h6>
+    <h6>Nationality: {{userData.city | titlecase}}</h6>
+    <h6>Aadhar:{{userData.aadhaarNumber}}</h6>
+    <h6>D.O.B:{{userData.dob | date: 'dd-MM-yyyy'}}</h6>
+
+</div>
+<div class="col-12 heading my-4">
+    <h3 class="text-center">Business</h3>
+    <h6> People limit:{{userData.peopleLimit}}</h6>
+    <h6>Charge per head: Rs. {{userData.perHeadCharge}}</h6>
+    <h6>Charge per day: Rs. {{userData.perDayCharge}}</h6>
+</div>
+<div class="col-12 heading my-4">
+    <h3 class="text-center">Experience</h3>
+    <div *ngFor="let item of userData.experience">
+        <h6>Work Place:{{item.work | titlecase}}</h6>
+    <h6>Work Profile: {{item.profile | titlecase}}</h6>
+    <h6>Start Year: {{item.startYear}}</h6>
+    <h6>Duration: Rs. {{userData.perDayCharge}}</h6>
+
+
+    </div>
+</div>
+    </div>
+    <!-- left -->
+    <div class="row col-12 col-md-6">
+        <div class="col-12 heading my-3 px-5">
+            <h3 class="text-center">Language</h3>
+            <div class="float-right" *ngFor="let item of userData.languages">{{item | titlecase}}&nbsp;,&nbsp;</div>
+
+        </div>
+        <div class="col-12 heading my-3 px-5">
+            <h3 class="text-center">Interests</h3>
+            <div class="float-right" *ngFor="let item of userData.interests">{{item | titlecase}}&nbsp;,&nbsp;</div>
+       </div>
+    </div>
+</div>
