--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-6 mb-3">
                     <b style="color: rgba(3, 169, 244, 0.7)">Age </b>
-                    <div>{{userData.age | date: 'dd-MM-yyyy'}}</div>
+                    <div>{{userData.age | age}} years old</div>
                 </div>
 
             </div>
