--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -38,7 +38,11 @@
             <div class="col-6">
               <div class="form-group">
                 <label>Work Profile</label>
-                <input type="text" class="form-control" placeholder="Enter work profile" formControlName="profile">
+                <!-- <input type="text" class="form-control" placeholder="Enter work profile" formControlName="profile"> -->
+                <select id="form1" class="form-control" formControlName="profile">
+                  <option value='' disabled>Select</option>
+                  <option *ngFor="let item of profileList" [value]="item"> {{ item }}</option>
+                </select>
               </div>
             </div>
             <div class="col-6 ">
