--- a/src/app/modules/home/filter-form/filter-form.component.html
+++ b/src/app/modules/home/filter-form/filter-form.component.html
@@ -4,13 +4,11 @@
             <div class="col-12 col-sm-6 col-md-6 col-lg-4">
                 <div class="form-group">
                     <select class="form-control" id="form58" formControlName="state" (change)="changeState($event)" class="browser-default custom-select">
-              <!-- <option value="" disabled>Select State</option> -->
-              <option *ngFor="let item of searchService.stateList" [value]="item.name">
-                 {{ item?.name }}
-              </option>
-            </select>
-                    <small>Enter State</small>
-                    <!-- <input type="text" class="form-control" formControlName="city" [(ngModel)]="searchService.city" placeholder="Enter city"> -->
+                        <option *ngFor="let item of searchService.stateList" [value]="item.name">
+                            {{ item?.name }}
+                        </option>
+                    </select>
+                    <small class="text-muted">Enter State</small>
                 </div>
             </div>
             <!--  -->
@@ -27,15 +25,16 @@
                 </button>
                         </div>
                     </div>
-                    <small>From - To</small>
+                    <small class="text-muted">From - To</small>
                 </div>
             </div>
 
             <div class="col-6 col-sm-8 col-md-7 col-lg-2">
                 <div class="form-group">
                     <!-- <label>People</label> -->
-                    <input type="number" class="form-control" formControlName="noOfPeople" [(ngModel)]="searchService.noOfPeople" placeholder="people">
-                    <small>No. of People</small>
+                    <input type="number" class="form-control" (change)="changeNoOfPeople($event)"
+                    formControlName="noOfPeople" [(ngModel)]="searchService.noOfPeople" placeholder="people">
+                    <small class="text-muted">No. of People</small>
                 </div>
             </div>
             <!--  -->
