--- a/src/app/modules/home/top-cities/top-cities.component.scss
+++ b/src/app/modules/home/top-cities/top-cities.component.scss
@@ -27,14 +27,12 @@ b {
     color: white;
 }
 
-// .md-layout .mbsc-scv-item {
-//     color: #fff;
-//     font-weight: bold;
-//     text-align: center;
-// }
-// .md-layout .mbsc-scv-c {
-//     margin: 10px 0;
-// }
-// .md-fixed .mbsc-scv-item {
-//     margin: 0 10px;
-// }
+.hover:hover{
+    color: white;
+}
+
+.bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+ }
