--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import '~mdbootstrap/css/bootstrap.css';
 @import '~mdbootstrap/css/mdb.min.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
-@import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
+// @import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 // @import "scss/style";
